# CGRA-Tool

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.mk
benchmarks/: rules.mk
benchmarks/conv2/: Makefile  conv2.c  conv2.ll  extracted.ll
benchmarks/dsp/: dsp.cpp  dsp.ll
benchmarks/dummy/: extracted.ll
benchmarks/fibonacci/: Makefile  fibonacci.cpp  fibonacci.ll
benchmarks/forward-propagation/: extracted.ll  forward-propagation.cpp  vectoradd.ll
benchmarks/mac/: Makefile  extracted.ll  mac.ll
benchmarks/mac2/: Makefile  extracted.ll  mac2.ll
benchmarks/matrix-multiply/: Makefile  extracted.ll  matrix-multiply.c  matrix-multiply.ll
benchmarks/sum/: Makefile  cgra.dot  dfg-more.dot  dfg.dot  extracted.ll  mapping.dot  mrrg-4.dot  sum.bc  sum.cpp  sum.ll
benchmarks/vectoradd/: Makefile  vectoradd.bc
doc/: Instructions.md
include/: CGRA.hpp  Common.hpp  DFG.hpp  MRRG.hpp  Mapper.hpp  Mapping.hpp  PE.hpp
scripts/: build-and-install.sh
src/: CGRAMapper.cpp  CGRATool.cpp  CMakeLists.txt
src/dfg/: CMakeLists.txt  DFG.cpp  DFGEdge.cpp  DFGNode.cpp
src/hardware-modeler/: CGRA.cpp  CMakeLists.txt  PE.cpp
src/llvm-plugin/: CGRAMapperPass.cpp  CGRAMapperPass.hpp  CMakeLists.txt  SchedulabilityPass.cpp
src/llvm-plugin/test/: Makefile  cgra.dot  cgra.v  config.json  dfg-more.dot  dfg.dot  extracted.ll  kernel.bc  kernel.cpp  kernel.ll  mapping.dot  mrrg-4.dot  params.json  ref-graph.dot  sum.bc  sum.cpp  sum.ll
src/mapper/: CMakeLists.txt  ExhaustiveMapper.cpp  FeasibleMapper.cpp  HeuristicMapper.cpp  ILPMapper.cpp  MRRG.cpp  Mapper.cpp  Mapping.cpp
topologies/: 2dmesh_1x2.toml
